gitops/cicd/base/jenkins-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 4m
    template.openshift.io/expose-uri: http://{.spec.host}{.spec.path}
  labels:
    app: jenkins-persistent
    template: jenkins-persistent-template
  name: jenkins
  namespace: cicd
spec:
  host: jenkins-cicd.apps-crc.testing
  subdomain: ""
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jenkins
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    host: jenkins-cicd.apps-crc.testing
    routerCanonicalHostname: apps-crc.testing
    routerName: default
    wildcardPolicy: None
